--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ resources:
 variables:
   # Container registry service connection established during pipeline creation
   dockerRegistryServiceConnection: '4b686543-f5e1-4ec1-a9ca-b6976878039f'
-  imageRepository: 'votingapplication'
+  imageRepository: 'result-app'
   containerRegistry: 'votingapplication.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/result/Dockerfile'
   tag: '$(Build.BuildId)'
