--- a/azure-pipelines-vote.yml
+++ b/azure-pipelines-vote.yml
@@ -39,3 +39,14 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+- stage: Update
+  displayName: Update
+  jobs:
+  - job: Update
+    displayName: Update
+    steps:
+    - task: ShellScript@2
+      inputs:
+        scriptPath: 'scripts/update-manifest.sh'
+        args: 'vote $imageRepository $tag'
+
