--- a/azure-pipelines-vote.yml
+++ b/azure-pipelines-vote.yml
@@ -48,5 +48,5 @@ stages:
     - task: ShellScript@2
       inputs:
         scriptPath: 'scripts/update-manifest.sh'
-        args: 'vote $imageRepository $tag'
+        args: 'vote $(imageRepository) $(tag)'
 
