Update azure-pipeline-worker.yml for Azure Pipelines

--- a/azure-pipeline-worker.yml
+++ b/azure-pipeline-worker.yml
@@ -39,3 +39,13 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
+- stage: Update
+  displayName: Update
+  jobs:
+  - job: Update
+    displayName: Update
+    steps:
+    - task: ShellScript@2
+      inputs:
+        scriptPath: 'scripts/update-manifest.sh'
+        args: 'worker $(imageRepository) $(tag)'
